WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199694
Safari’s context menu actions are missing options
https://bugs.webkit.org/show_bug.cgi?id=199694
Summary
Safari’s context menu actions are missing options
Dean Jackson
Reported
2019-07-10 18:13:00 PDT
Safari’s context menu actions are missing options
Attachments
Patch
(1.47 KB, patch)
2019-07-10 18:16 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-07-10 18:15:05 PDT
<
rdar://problem/52726822
>
Dean Jackson
Comment 2
2019-07-10 18:16:45 PDT
Created
attachment 373885
[details]
Patch
Tim Horton
Comment 3
2019-07-10 18:17:38 PDT
Comment on
attachment 373885
[details]
Patch OMG TESTS
Dean Jackson
Comment 4
2019-07-10 18:29:39 PDT
Committed
r247340
: <
https://trac.webkit.org/changeset/247340
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug