Safari’s context menu actions are missing options https://bugs.webkit.org/show_bug.cgi?id=199694 <rdar://problem/52726822>

Reviewed by Tim Horton.

One of the most embarrassing errors I've ever made. I was returning
early when something existed, instead of when it didn't exist.
(*cough* tests *cough*)

* UIProcess/ios/WKContentViewInteraction.mm:

Canonical link: https://commits.webkit.org/213577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247340 268f45cc-cd09-0410-ab3c-d52691b4dbfc